--- a/src/pages/Home/App2.0.css
+++ b/src/pages/Home/App2.0.css
@@ -66,12 +66,17 @@
   font-weight: 600;
 }
 
-.new {
-  background-color: #00c853;
+.badge-new {
+  background-color: rgba(0, 174, 112, 1);
   color: white;
-  font-size: 21px;
+  font-size: 23px;
   padding: 5px 10px;
+  border-radius: 10px;
   animation: pulse 1.5s infinite alternate;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 
 @keyframes pulse {
@@ -83,16 +88,20 @@
   }
 }
 
-.version {
+.badge-version {
   background-color: transparent;
   color: black;
   font-size: 23px;
 }
 
 .title {
+  font-weight: 700;
+  line-height: 100%;
+  width: 605px;
   font-size: 51px;
   font-weight: 700;
-  color: #000;
+  letter-spacing: 0%;
+  color:rgba(0, 0, 0, 1);
   animation: fadeIn 1s ease-in-out;
 }
 
@@ -101,10 +110,19 @@
 }
 
 .description {
-  color: gray;
+  color: rgba(154, 154, 154, 1);
   font-size: 21px;
   font-weight: 500;
   animation: slideInRight 1s ease-in-out;
+  text-align: start;
+  /* width: 541px;
+  height: 64px; */
+}
+
+.get{
+  font-size: 15px;
+  font-weight: 600;
+  color: rgba(0, 0, 0, 1);
 }
 
 @keyframes slideInRight {
@@ -122,13 +140,18 @@
   display: flex;
   align-items: center;
   margin-top: 20px;
-  color: black;
+  color:rgba(102, 115, 132, 1);
+  font-size: 15px;
+  font-weight: 600;
+  line-height: 100%;
+  
 }
+
 
 .early-access input {
   padding: 10px;
   width: 200px;
-  border: 1px solid #ddd;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   transition: all 0.3s ease-in-out;
 }
