--- a/src/pages/Navbar.css
+++ b/src/pages/Navbar.css
@@ -8,6 +8,7 @@
     width: 99.5%;
     height: 75px;
     top: 0;
+    padding-top: 20px;
   }
   .product {
     color: black;
@@ -19,6 +20,8 @@
 .navbar-left {
     display: flex;
     align-items: center;
+    padding-left: 60px;
+    
   }
   
   .brand {
@@ -105,8 +108,9 @@
   }
   .logo {
     width: 132x;
-    height: 118px;
+    height: 100px;
     margin-right: 10px;
+    padding-bottom: 15px;
   }
 
 .dropdown {
