--- a/src/pages/Home/Card.css
+++ b/src/pages/Home/Card.css
@@ -1,14 +1,22 @@
 .card-container {
   text-align: center;
-  width: 100%;
+  width: 1735px;
+  height: 1800px;
+  left: 50px;
+  
+  
   position: absolute;
-  top: 1100px;
+  top: 1325px;
   background-color: white;
   height: auto;
   opacity: 0;
   transform: translateY(50px);
   animation: fadeInUp 1s ease-out forwards;
-  
+  -webkit-transform: translateY(50px);
+  -moz-transform: translateY(50px);
+  -ms-transform: translateY(50px);
+  -o-transform: translateY(50px);
+  -webkit-animation: fadeInUp 1s ease-out forwards;
 }
 
 @keyframes fadeInUp {
@@ -22,11 +30,45 @@
   }
 }
 
+.para-1{
+  font-size: 21px;
+  font-weight: 500;
+  color:rgba(154, 154, 154, 1) ;
+ 
+}
+
+.card-title{
+  font-size: 51px;
+  font-weight: 700;
+  line-height: 100%;
+  color: rgba(0, 0, 0, 1);
+  /* width: 339px;
+  height: 77px; */
+  padding-left: 35%;
+  
+  
+}
+
+.card-subtitle{
+  columns: rgba(154, 154, 154, 1);
+  font-size: 21px;
+  font-weight: 500;
+  letter-spacing: 0%;
+  width: 646px;
+  height: 96px;
+  /* top: 1450px;
+  left: 619px; */
+  text-align: center;
+  padding-left: 30%;
+}
+
 .card-sections {
   display: flex;
   justify-content: center;
-  gap: 1.5rem;
+  gap: 100px;
   flex-wrap: wrap;
+  width: 1528px;
+  height: 532px;
 }
 
 .card {
@@ -51,13 +93,13 @@
 }
 
 .card1 {
-  background-color: #bdbdbd;
+  background-color:rgba(247, 245, 253, 1);
 }
 .card2 {
-  background-color: #ffecec;
+  background-color: rgba(255, 236, 236, 1);
 }
 .card3 {
-  background-color: #fff0db;
+  background-color:rgba(255, 240, 219, 1);
 }
 
 .card:hover {
@@ -80,19 +122,21 @@
 }
 
 .card-header {
-  font-size: 1.2rem;
-  font-weight: bold;
-  color: #333;
+  font-size: 36px;
+  font-weight: 600;
+  color: rgba(0, 19, 244, 1);
   margin-bottom: 1rem;
 }
 
 .card ul {
   list-style: none;
-  padding: 0;
+  padding: 1px;
   color: black;
 }
 
 .card li {
+  font-size: 20px;
+  font-weight: 600;
   background: #fff;
   padding: 0.8rem;
   border-radius: 5px;
@@ -102,31 +146,53 @@
   align-items: center;
   gap: 10px;
   transition: transform 0.3s ease-in-out;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
 
 .card li:hover {
   transform: translateX(10px);
 }
 
+
+.bluestock-2{
+  width: 1735px;
+  height: 585px;
+  align-items: start;
+  top: 2335px;
+}
+
 .card-info {
   margin-top: 2rem;
+  
   color: black;
 }
 
 .card-info p {
-  max-width: 40%;
-  margin-left: 30%;
+  width: 592px;
+  color: rgba(154, 154, 154, 1);
+  height: 128px;
+  font-size: 21px;
+  font-weight: 500;
+  /* margin-left: 30%; */
+  text-align: start;
+  padding-left: 25px;
+  
 }
 
 .card-info h3 {
-  font-size: 1.5rem;
+  max-width: 822px;
+  height: 77px;
+  font-size: 51px;
   font-weight: bold;
   color: black;
 }
 
 .card-icons {
   display: flex;
-  justify-content: center;
+  justify-content: start;
   gap: 1rem;
   margin: 2rem 0;
   color: black;
@@ -139,7 +205,10 @@
   font-size: 1rem;
   color: black;
   transition: transform 0.3s ease-in-out;
+  width: 206px;
+  height: 190px;
 }
+
 
 .icon:hover {
   transform: scale(1.2);
@@ -152,11 +221,26 @@
   color: black;
   align-items: center;
   text-align: center;
+  padding-left: 90px;
+}
+
+.card-footer h3 {
+  color: rgba(0, 0, 0, 1);
+  font-size: 51px;
+  font-weight: 700;
+
 }
 
 .card-footer p {
-  color: gray;
+  color: rgba(154, 154, 154, 1);
+  font-size: 21px;
+  font-weight: 500;
+  line-height: 100%;
+  width: 647px;
+  height: 119px;
+  text-align: start;
 }
+
 
 .tag {
   background: #00c896;
@@ -167,8 +251,8 @@
 }
 
 .image1 {
-  width: 100px;
-  height: 50px;
+  width: 150px;
+  height: 150px;
 }
 
 @media (max-width: 768px) {
