--- a/src/pages/Home/Download.css
+++ b/src/pages/Home/Download.css
@@ -3,15 +3,20 @@
     justify-content: space-between;
     align-items: center;
     background-color: #fff;
-    width: 100%;
+    width: 1556px;
+    height: 927px;
     position: absolute;
-    top: 2180px;
+    top: 2700px;
     height: auto;
+    
   }
   
   .left-section {
-    width: 40%;
-    margin-top: -250px;
+    /* width: 40%; */
+    /* margin-top: -250px; */
+    text-align:start;
+    font-size: 1px;
+    margin: 0%;
   }
   
   .resources-badge {
@@ -23,16 +28,25 @@
   }
   
   .title {
-    font-size: 2rem;
+    color: rgba(0, 0, 0, 1);
+    font-size: 51px;
+    font-weight: 700;
     font-weight: bold;
     margin-top: 10px;
+    line-height: 100%;
   }
   
   .description {
-    font-size: 1rem;
-    color: gray;
-    margin-top: 10px;
-    line-height: 1.6;
+    
+    color: rgb(222, 34, 34);
+    /* margin-top: 10px; */
+    line-height: 100%;
+    /* height: 128px;
+    width: 647px; */
+    font-weight: 600;
+    left: 94px;
+    text-align: start;
+    font-size: 21px;
   }
   
   .qr-download {
@@ -51,14 +65,19 @@
   }
   
   .scan-text {
-    color: blue;
-    font-weight: bold;
-    font-size: 1.1rem;
+    color: rgba(0, 19, 244, 1);
+    font-weight: 600;
+    font-size: 29px;
+    width: 294px;
+    height: 44px;
+    left: 364px;
+    text-align: start;
   }
   
   .instruction {
-    color: gray;
-    font-size: 0.9rem;
+    color: rgba(154, 154, 154, 1);
+    font-size: 15px;
+    text-align: start;
   }
   
   .feature-icons {
@@ -93,8 +112,10 @@
   }
   
   .mobile-image {
-    width: 100%;
-    max-width: 300px;
+    width: 300px;
+    
+    
+    padding-top: 20px;
   }
   
   @media (max-width: 768px) {
@@ -132,10 +153,11 @@
     .mobile-image {
       width: 100%;
     }
-    .description {
+    /* .description {
       position: relative;
       align-items: center;
       left: 35%;
-    }
+     
+    } */
   }
   
