--- a/src/pages/Home/Market.css
+++ b/src/pages/Home/Market.css
@@ -3,26 +3,29 @@
     font-family: Arial, sans-serif;
     width: 99%;
     position: absolute;
-    top: 3650px;
+    top: 4600px;
+    padding-left: 70px;
   }
   
   .market-movers h1 {
-    font-size: 2rem;
+    font-size: 42px;
+    padding-left: 5px;
     font-weight: bold;
-    color: black;
-    text-align: center;
+    color:rgba(0, 0, 0, 1);
+    text-align: start;
   }
   
   .market-movers p {
-    font-size: 1rem;
-    color: #555;
-    text-align: center;
+    font-size: 22px;
+    color: rgba(0, 0, 0, 1);
+    font-weight: 600;
+    text-align: start;
   }
   
   .market-tables {
     display: flex;
     gap: 20px;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     color: black;
   }
   
@@ -31,7 +34,7 @@
     border-radius: 8px;
     padding: 15px;
     flex: 1;
-    min-width: 400px;
+    
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   }
   
