--- a/src/pages/IPO/Ipo1.css
+++ b/src/pages/IPO/Ipo1.css
@@ -7,12 +7,23 @@
   }
   
   h2 {
-    font-size: 24px;
+    font-size: 32px;
     font-weight: bold;
     color: #222;
     padding-top: 80px;
+    padding-left: 10px;
   }
   
+  
+
+  .text-2xl {
+    text-align: start;
+    padding-left: 10px;
+    color:rgba(0, 0, 0, 1);
+    font-size: 14px;
+
+  }
+
   .ipo-header {
     display: flex;
     justify-content: space-between;
@@ -66,8 +77,8 @@
     padding: 10px;
     gap: 20px;
     width: 100%;
-    
-    
+    /* font-size: 18px; */
+    text-align: center;
   }
   
   .ipo-list::-webkit-scrollbar {
@@ -88,6 +99,8 @@
   .ipo-card img {
     max-width: 80px;
     margin-bottom: 10px;
+    align-items: center;
+    text-align: center;
   }
   
   .ipo-name {
@@ -95,6 +108,8 @@
     font-weight: bold;
     color: #3b82f6;
   }
+
+ 
   
   .ipo-card p {
     font-size: 14px;
@@ -102,8 +117,9 @@
   }
   
   .highlight {
-    font-weight: bold;
+    font-weight: 100;
     color: #222;
+    font-size: 18px;
   }
   
   .ipo-buttons {
