--- a/src/pages/IPO/ipo2.css
+++ b/src/pages/IPO/ipo2.css
@@ -4,9 +4,9 @@
     align-items: center;
     padding: 40px 20px;
     width: 1304px;
-    height: 471px;
+    height: 497px;
     color: rgba(255, 255, 255, 1);
-    
+    top: 1054px;
   }
   
   .ipo2-card {
@@ -25,6 +25,14 @@
     margin-bottom: 10px;
     height: 118px;
     width: 132px;
+    
+    
+    
+  }
+
+  .display-flex {
+    display: flex;
+    
   }
   
   .ipo2-title {
@@ -39,6 +47,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-left: 150px;
     
   }
   
