--- a/src/pages/IPO/ipo4.css
+++ b/src/pages/IPO/ipo4.css
@@ -3,21 +3,23 @@
     max-width: 800px;
     margin: auto;
     padding: 20px;
+    text-align: start;
   }
   
   h2 {
-    color: #333;
-    text-align: center;
+    color: rgba(0, 0, 0, 1);
+    text-align: start;
     font-size: 40px;
     margin-left: 8px;
   }
   
   p {
-    text-align: center;
-    color: #666;
-    font-size: 24px;
+    text-align: start;
+    color: rgba(0, 0, 0, 1);
+    font-size: 22px;
     margin-bottom: 20px;
     margin-left: 8px;
+    padding-left: 8px;
   }
   
   .faq-list {
@@ -42,16 +44,22 @@
     font-weight: bold;
     color: #333;
     align-items: center;
+    width: 100%;
+    height: 81px;
   }
   
   .faq-question:hover {
-    color: #007bff;
+    color: rgba(92, 139, 254, 1);
   }
   
   .icon {
     font-size: 28px;
     font-weight: bold;
     color: rgba(92, 139, 254, 1);
+    width: 50px;
+    height: 50px;
+    margin-bottom: 5px;
+    align-items: center;
   }
   
   .faq-answer {
