--- a/src/pages/Navbar.css
+++ b/src/pages/Navbar.css
@@ -21,7 +21,7 @@
     display: flex;
     align-items: center;
     padding-left: 60px;
-    
+    color: rgba(154, 154, 154, 1);
   }
   
   .brand {
@@ -40,6 +40,7 @@
     list-style: none;
     display: flex;
     gap: 20px;
+    padding-left: 90px;
   }
   
   .nav-links li {
