some error solve by VIJESH

--- a/src/pages/Home/Footer.css
+++ b/src/pages/Home/Footer.css
@@ -44,7 +44,7 @@
     text-decoration: none;
   }
   .text1 {
-    color: black;
+    color: rgba(102, 115, 132, 1);
     text-decoration: none;
   }
   .footer-column ul li:hover {
