--- a/src/pages/Home/App-Download.css
+++ b/src/pages/Home/App-Download.css
@@ -61,7 +61,7 @@
     font-weight: 700;
 }
 
-.highlight {
+.highlights {
     color: rgba(63, 82, 255, 1);
     font-size: 41px;
     font-weight: 700;
