--- a/src/pages/Broker/BrokerCompare.css
+++ b/src/pages/Broker/BrokerCompare.css
@@ -33,6 +33,7 @@
   align-items: center;
   gap: 40px;
   margin-bottom: 40px;
+  
 }
 
 .broker-card {
@@ -41,7 +42,8 @@
   padding: 20px;
   text-align: center;
   box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-  width: 220px;
+  width: 380px;
+  height: 460px;
 }
 
 .broker-card img {
@@ -71,7 +73,7 @@ button {
   font-weight: bold;
   border-radius: 6px;
   cursor: pointer;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 h3 {
