--- a/src/pages/Home/Review.css
+++ b/src/pages/Home/Review.css
@@ -2,7 +2,7 @@
     text-align: center;
     position: absolute;
     top: 4567px; /* Adjust this value as needed */
-    width: 75%;
+    width: 1600px;
     height: 475px;
     left: 89px;
     
@@ -26,7 +26,7 @@
 .reviews-container {
     display: flex;
     gap: 20px;
-    
+    /* width: 1000px; */
     overflow-x: auto;
     scroll-behavior: smooth;
     white-space: nowrap;
